[package]
name = "emerygo"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
getopts = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
pd3000 = { git = "https://github.com/jclulow/rust-pd3000" }
chrono = "0.4"
